fix scrollbar design

--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,16 @@ img{display: inline-block;}
 
 
 
+  body::-webkit-scrollbar {
+    width: 0.5em;
+  }
+   
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    background-color: rgba(224,210,199,0.8);
+    border-radius: 8px;
+    outline: 1px solid slategrey;
+  }
